<resources>
    <string name="app_name">Stay Awake</string>
    <string name="sos_text">SOS</string>
    <string name="home_text">Home</string>
    <string name="developer_name">Created by Sudo Ajay</string>
    <string name="notifications_group_service">Service control</string>
    <string name="firebase_channel_id" >Push Notification</string>
    <string name="stay_awake_channel_id" >Running Service</string>
    <string name="notification_action_pause">Pause</string>
    <string name="start_text">Start Stay Awake</string>
    <string name="stop_text">Stop </string>
    <string name="stopping_text">Stopping…</string>
    <string name="msg_token_fmt" >InstanceID Token: %s</string>
    <string name="awake_is_running_text">Awake is running</string>
    <string name="notifications_paused">Paused service</string>
    <string name="click_to_open_app_text">Click to open the app </string>
    <string name="notification_paused_title">Stay Awake paused</string>
    <string name="notification_paused_text">Tap to resume.</string>
    <string name="successfully_cache_data_is_deleted_text">Successfully Cache Data Is Deleted</string>
    <string name="dark_mode_trans_text">Dark Mode</string>
    <string name="off_trans_text">Off</string>
    <string name="on_trans_text">On</string>
    <string name="automatic_at_sunset_trans_text">Automatic at sunset</string>
    <string name="set_by_battery_saver_trans_text">Set by battery saver</string>
    <string name="system_default_trans_text">System Default</string>
    <string name="darkMode_optionMenu">Dark Mode</string>
    <string name="display_setting_text">Display Setting</string>
    <string name="default_setting_optionMenu">Default Setting</string>
    <string name="more_app_setting_optionMenu">More App Setting</string>
    <string name="title_activity_settings">Setting</string>
    <string name="app_setting_text">App Setting</string>
    <string name="system_setting_text">System Settings</string>
    <string name="automation_text">Automation</string>
    <string name="use_dark_mode_text">Use Dark Mode</string>
    <string name="change_language_text">"Change Language "</string>
    <string name="clear_cache_text">Clear Cache</string>
    <string name="help_support_text">Help &amp; Support</string>
    <string name="privacy_policy_text">Privacy Policy</string>
    <string name="report_a_bug_text">Report A Bug</string>
    <string name="report_a_bug_summary_text">submit an issue on Github issue page</string>
    <string name="send_feedback_text">Send Feedback</string>
    <string name="send_feedback_summary_text">submit feedback to fix the app bug</string>
    <string name="more_info_text">More Info</string>
    <string name="share_app_text">Share App</string>
    <string name="rate_use_text">Rate-Us</string>
    <string name="more_app_text">More App</string>
    <string name="about_app_text">About App</string>
    <string name="automatically_start_wifi_text">Automatically start (Wifi)</string>
    <string name="start_wifi_summary_text">Screen Will Never Sleep While Connecting To Wifi Network</string>
    <string name="automatically_start_mobile_text">Automatically start (Mobile)</string>
    <string name="start_mobile_summary_text">Screen Will Never Sleep While Connecting To Mobile Network</string>
    <string name="connected_usb_text">Connected Usb</string>
    <string name="connected_usb_summary_text">Screen Will Never Sleep While Connecting To Usb</string>
    <string name="power_charging_text">Power(Charging)</string>
    <string name="power_charging_summary_text">Screen Will Never Sleep While Charging</string>
    <string name="power_low_text">Power(Low)</string>
    <string name="power_low_summary_text">Screen Will Sleep While Battery Low</string>
    <string name="power_saving_mode_text">Power(Saving Mode)</string>
    <string name="power_saving_mode_summary_text">Screen Will Sleep While Battery Saving Mode</string>
    <string name="desk_dock_text">Desk Dock</string>
    <string name="desk_dock_summary_text">Screen Will Never Sleep While Connecting To Desk Dock</string>
    <string name="car_dock_text">Car Dock</string>
    <string name="car_dock_summary_text">Screen Will Never Sleep While Connecting To Car Dock</string>
    <string name="otg_text">OTG Connect</string>
    <string name="otg_summary_text">Screen Will Never Sleep While Connecting To OTG</string>
    <string name="show_notification_text">Show notification</string>
    <string name="show_notification_summary_text">Allowing toggle on/off</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="share_app_summary_text">share the play store app link</string>
    <string name="rate_use_summary_text">express your experience through rating</string>
    <string name="more_app_summary_text">there is more app out there</string>
    <string name="about_app_summary_text">open github link</string>
    <string name="always_text">Always</string>
    <string name="always_summary_text">Screen Will Always Stay Awake</string>
    <string name="display_setting_summary_text">Auto Sleep , Brightness etc</string>
    <string name="start_on_boot_text">Start on Boot</string>
    <string name="start_on_boot_summary_text">Screen Will Never Sleep While your Phone Tuned on</string>
    <string name="reboot_devices_text">Start on Reboot</string>
    <string name="reboot_devices_summary_text">Screen Will Never Sleep While your Phone Reboot</string>
    <string name="bluetooth_devices_text">Bluetooth Devices</string>
    <string name="bluetooth_devices_summary_text">Screen Will Never Sleep While Connecting To Bluetooth Devices</string>
    <string name="nfc_connect_text">NFC Connect</string>
    <string name="nfc_connect_summary_text">Screen Will Never Sleep While Connecting To NFC</string>
    <string name="airplane_mode_text">Airplane Mode</string>
    <string name="airplane_mode_summary_text">Screen Will Sleep While Phone In Airplane Mode</string>
    <string name="do_not_disturb_mode_text">Do-Not-Disturb Mode</string>
    <string name="do_not_disturb_summary_text">Screen Will Sleep While Phone In Do-Not-Disturb Mode</string>
    <string name="device_timeout_text">Device Timeout </string>
    <string name="device_timeout_summary_text">Set The Timer According To Your Work</string>
    <string name="wifi_text">Wifi</string>
    <string name="mobile_data_text">Mobile Data</string>
    <string name="vpn_text">Vpn</string>
    <string name="no_internet_text">No Internet</string>
    <string name="shareMessage">Hey, check This App which helps you to Delete Duplicate and Unnecessary Data from the phone -</string>
    <string name="add_Screenshot_Small_text" translatable="true">Add Screenshot Small</string>
    <string name="add_Screenshot_Large_text" translatable="true">Add Screenshot Large</string>
    <string name="close_Image_text" translatable="true">Close Image</string>
    <string name="feedbackEditTextHint" translatable="true">Please write your feedback</string>
    <string name="describe_your_issue_text" translatable="true">Describe your issue</string>
    <string name="feedbackEditTextError" translatable="true">Please write something in feedback</string>
    <string name="supportEditTextError" translatable="true">Please write something in issue</string>
    <string name="systemInfo_text" translatable="true">Your System Info will be send to our developer team</string>
    <string name="add_screenshot_text" translatable="true">+ Add Screenshot</string>
    <string name="send_issue_text"  translatable="true">Send Issue</string>
    <string name="feedback_about_app_text"  translatable="true">FeedBack about %1$s</string>
    <string name="issue_in_app_text"  translatable="true">Issue in %1$s</string>
    <string name="touch_again_to_change_image_text" translatable="true">Touch again to change image</string>
    <string name="system_info_text"  translatable="true"> System Info </string>
    <string name="device_text"  translatable="true">Device : </string>
    <string name="os_api_level_text"  translatable="true">Os Api Level : </string>
    <string name="language_text"  translatable="true">Language : </string>
    <string name="total_memory_text"  translatable="true">Total Heap Memory : </string>
    <string name="free_memory_text"  translatable="true">Free Heap Memory : </string>
    <string name="screen_Text"  translatable="true">Screen Size : </string>
    <string name="network_type_text"  translatable="true">Network Type : </string>
    <string name="app_version_text"  translatable="true">App Version : </string>
    <string name="ok_text"  translatable="true">OK</string>
    <string name="reportIt">There is Error Please Send Feedback through app setting</string>
    <string name="giveUsPermission">Give us permission for further process</string>
    <string name="shortcut_setting_text">Setting</string>
    <string name="shortcut_flash_text">Flashlight</string>
    <string name="notification_channel_name">Awake Notifications</string>
    <string name="notification_channel_id">awake_channel_id</string>
    <string name="added_text">tile added </string>
    <string name="removed_text">tile removed </string>
    <string name="dark_mode_text" translatable="false">Dark Mode</string>
    <string name="is_dark_mode_text" translatable="false">isDarkMode</string>
    <string name="off_text" translatable="false">Off</string>
    <string name="on_text" translatable="false">On</string>
    <string name="automatic_at_sunset_text" translatable="false">Automatic at sunset</string>
    <string name="set_by_battery_saver_text" translatable="false">Set by battery saver</string>
    <string name="system_default_text" translatable="false">System Default</string>
    <string name="is_stay_awake_active_text" translatable="false">isStayAwakeActive</string>
    <string name="is_flash_active_text" translatable="false">isFlashActive</string>
    <string name="select_language_text" translatable="true">Select Language</string>
    <string name="continue_text" translatable="true">Continue</string>
    <string name="select_language_bracket" translatable="false">( %1$s )</string>
    <string name="english_text" translatable="true">English</string>
    <string name="hindi_text" translatable="true">Hindi</string>
    <string name="bengali_text" translatable="true">Bengali</string>
    <string name="german_text" translatable="true">German</string>
    <string name="spanish_text" translatable="true">Spanish</string>
    <string name="french_text" translatable="true">French</string>
    <string name="portuguese_text" translatable="true">Portuguese</string>
    <string name="indonesian_text" translatable="true">Indonesian</string>
    <string name="italian_text" translatable="true">Italian</string>
    <string name="japanese_text" translatable="true">Japanese</string>
    <string name="korean_text" translatable="true">Korean</string>
    <string name="nepali_text" translatable="true">Nepali</string>
    <string name="dutch_text" translatable="true">Dutch</string>
    <string name="punjabi_text" translatable="true">Punjabi</string>
    <string name="russian_text" translatable="true">Russian</string>
    <string name="tamil_text" translatable="true">Tamil</string>
    <string name="telugu_text" translatable="true">Telugu</string>
    <string name="thai_text" translatable="true">Thai</string>
    <string name="you_are_a_sports_junkie_text" translatable="true">You\'re a scanning legend!</string>
    <string name="wouldnt_you_love_to_stay_text" translatable="true">Would\'t you feel special when we push out new features and many other exciting things and you\'re the first one to get notified? Sure you would. Press the Get Notified button below and stay ahead of others. </string>
    <string name="skip_text" translatable="true">Skip</string>
    <string name="get_notified_text" translatable="true">Get Notified</string>
</resources>