<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory app:title="@string/system_setting_text">
        <CheckBoxPreference
            app:key="start_on_usb"
            app:summary="@string/connected_usb_summary_text"
            app:title="@string/connected_usb_text" />
        <CheckBoxPreference
            app:key="start_on_charging"
            app:summary="@string/power_charging_summary_text"
            app:title="@string/power_charging_text" />
        <CheckBoxPreference
            app:defaultValue="true"
            app:key="show_notification"
            app:summary="@string/show_notification_summary_text"
            app:title="@string/show_notification_text" />

        <CheckBoxPreference
            app:key="start_on_car_dock"
            app:summary="@string/car_dock_summary_text"
            app:title="@string/car_dock_text" />

        <CheckBoxPreference
            app:key="start_on_desk_dock"
            app:summary="@string/desk_dock_summary_text"
            app:title="@string/desk_dock_text" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/automation_text">
        <CheckBoxPreference
            app:key="start_on_boot"
            app:summary="@string/start_on_boot_summary_text"
            app:title="@string/start_on_boot_text" />

        <CheckBoxPreference
            app:key="start_on_wifi"
            app:summary="@string/start_wifi_summary_text"
            app:title="@string/automatically_start_wifi_text" />
        <CheckBoxPreference
            app:key="start_on_mobile"
            app:summary="@string/start_mobile_summary_text"
            app:title="@string/automatically_start_mobile_text" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/app_setting_text">
        <Preference
            app:key="useDarkTheme"
            app:title="@string/use_dark_mode_text" />

        <ListPreference
            android:defaultValue="en"
            android:entries="@array/languageList"
            android:entryValues="@array/languagesValues"
            android:key="changeLanguage"
            android:title="@string/change_language_text" />

        <Preference
            app:key="clearCache"
            app:title="@string/clear_cache_text" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/help_support_text">
        <Preference
            android:key="privacyPolicy"
            android:title="@string/privacy_policy_text" />
        <Preference
            android:key="sendFeedback"
            android:summary="@string/send_feedback_summary_text"
            android:title="@string/send_feedback_text" />
        <Preference
            android:key="reportABug"
            android:summary="@string/report_a_bug_summary_text"
            android:title="@string/report_a_bug_text" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/more_info_text">
        <Preference
            android:key="shareApp"
            android:summary="@string/share_app_summary_text"
            android:title="@string/share_app_text" />
        <Preference
            android:key="rateUs"
            android:summary="@string/rate_use_summary_text"
            android:title="@string/rate_use_text" />
        <Preference
            android:key="moreApp"
            android:summary="@string/more_app_summary_text"
            android:title="@string/more_app_text" />
        <Preference
            android:key="aboutApp"
            android:summary="@string/about_app_summary_text"
            android:title="@string/about_app_text" />

    </PreferenceCategory>

</PreferenceScreen>
