<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/setting_optionMenu"
        android:icon="@drawable/ic_settings"
        android:title="@string/darkMode_optionMenu"
        app:iconTint="@color/bottomNavigation_SelectedColor"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/display_setting_optionMenu"
        android:title="@string/display_setting_text" />
    <item
        android:id="@+id/default_setting_optionMenu"
        android:title="@string/default_setting_optionMenu" />
    <item
        android:id="@+id/more_app_setting_optionMenu"
        android:title="@string/more_app_setting_optionMenu" />
</menu>